[package]
name = "lua_codegen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src-rust/lib.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
gloo-utils = "0.2.0"
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
[dependencies.neige-lua]
version = "0.1.2"
features = ["wasm"]
